--- a/services.html
+++ b/services.html
@@ -20,193 +20,173 @@
       "LOR Assistance",
       "Student Visa Assistance",
       "Scholarship Guidance",
-      "Education Loan Support",
-      "Pre-Departure Support"
+      "Education Loan Support"
     ],
-    "areaServed": "India",
-    "description": "Comprehensive study abroad services including university shortlisting, SOP/LOR writing, application submission, scholarship research, and visa guidance for USA, UK, Canada, Ireland and Australia.",
-    "offers": [
-      {
-        "@type": "Offer",
-        "name": "University Shortlisting",
-        "description": "Personalised recommendation of universities based on academic profile, budget and career goals."
-      },
-      {
-        "@type": "Offer",
-        "name": "SOP & LOR Writing",
-        "description": "Professional drafting and editing of SOPs and LORs tailored to program requirements."
-      },
-      {
-        "@type": "Offer",
-        "name": "Visa Filing Support",
-        "description": "Assistance with VISA document preparation, mock interviews and filing."
-      },
-      {
-        "@type": "Offer",
-        "name": "Application Filing",
-        "description": "Full support for admission applications to universities abroad."
-      }
-    ],
-    "review": [
-      {
-        "@type": "Review",
-        "author": "Devansh R",
-        "reviewBody": "Their guidance for MS in CS applications helped me get an admit with scholarship.",
-        "reviewRating": { "@type": "Rating", "ratingValue": "5" }
-      },
-      {
-        "@type": "Review",
-        "author": "Meera S",
-        "reviewBody": "Visa preparation was detailed and extremely helpful.",
-        "reviewRating": { "@type": "Rating", "ratingValue": "5" }
-      },
-      {
-        "@type": "Review",
-        "author": "Samir A",
-        "reviewBody": "Excellent loan and scholarship assistance.",
-        "reviewRating": { "@type": "Rating", "ratingValue": "5" }
-      }
-    ]
+    "areaServed": "India"
   }
   </script>
 
   <link rel="canonical" href="https://zheveducation.com/services.html">
-  <meta name="google-site-verification" content="UDWz14iODOz9mqHBeFAhVdkxtOlqV3TghXXDoQKZwv4" />
 
-  <!-- SEO Meta Tags -->
-  <title>Study Abroad Services | Applications, SOP, Visa, Scholarships | Zhev Education</title>
-  <meta name="description" content="Zhev Education offers complete study abroad services including university shortlisting, SOP/LOR writing, application filing, scholarship research, visa guidance and pre-departure support.">
-  <meta name="keywords" content="study abroad services, SOP writing service, LOR drafting, student visa assistance, university shortlisting, education consultants India, MS in CS guidance, scholarship help">
-  <meta name="author" content="Zhev Education Consultancy">
+  <title>Study Abroad Services | Applications, SOP, Visa & Scholarships</title>
+  <meta name="description" content="Explore Zhev Education's services: university shortlisting, SOP/LOR writing, application support, visa assistance, scholarships & pre-departure guidance.">
+  <meta name="keywords" content="study abroad services, SOP writing India, visa assistance, student applications, study abroad consultants Mumbai">
 
-  <!-- Open Graph -->
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Study Abroad Services – Zhev Education">
-  <meta property="og:description" content="Full support for university shortlisting, SOP/LOR writing, application submission and visa assistance.">
-  <meta property="og:url" content="https://zheveducation.com/services.html">
-  <meta property="og:image" content="https://contactus328-ai.github.io/zheveducation/assets/og-image.png">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Study Abroad Services – Zhev Education">
-  <meta name="twitter:description" content="Comprehensive admissions, visa and scholarship services for studying abroad.">
-  <meta name="twitter:image" content="https://contactus328-ai.github.io/zheveducation/assets/og-image.png">
+  <link rel="stylesheet" href="assets/style.css">
 
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="assets/style.css" />
+  <style>
+    header {
+      background: #2F3A56;
+      padding: 15px;
+      color: white;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    nav {
+      display: flex;
+      gap: 20px;
+      align-items: center;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    .hamburger {
+      display: none;
+      font-size: 30px;
+      cursor: pointer;
+      color: white;
+    }
+
+    @media (max-width: 768px) {
+      nav {
+        display: none;
+        flex-direction: column;
+        background: #2F3A56;
+        padding: 10px;
+        width: 100%;
+      }
+      nav a {
+        margin: 10px 0;
+      }
+      .hamburger {
+        display: block;
+      }
+    }
+  </style>
+
+  <script>
+    function toggleMenu() {
+      const nav = document.getElementById("mobileNav");
+      nav.style.display = nav.style.display === "block" ? "none" : "block";
+    }
+  </script>
 
 </head>
 
 <body>
 
-  <header>
-    <h1>Our Services</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="services.html">Services</a>
-      <a href="countries.html">Countries</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
+<!-- CLEAN MINIMAL HEADER -->
+<header>
+  <span class="hamburger" onclick="toggleMenu()">☰</span>
+  <nav id="mobileNav">
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="services.html">Services</a>
+    <a href="countries.html">Countries</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+</header>
 
-  <section>
-    <h2>Complete Study Abroad Support</h2>
-    <p>
-      At Zhev Education, we provide end-to-end support for students aspiring to study abroad. Our services 
-      are designed to simplify the application journey—from choosing the right universities to preparing 
-      strong applications and completing visa documentation. We specialise in helping students pursue 
-      programs such as MS in Computer Science, Data Science, Engineering, MBA, Healthcare, Architecture, 
-      Design and many more in USA, UK, Canada, Ireland, Australia and New Zealand.
-    </p>
-    <p>
-      Our counsellors analyse your academic profile, goals and financial plan to create customised pathways 
-      that increase your chances of admission and scholarships. Whether you're applying for MS in CS, MBA, 
-      Engineering, Nursing or any specialized program, our strategic guidance ensures your application 
-      stands out in competitive admissions cycles.
-    </p>
-  </section>
+<section>
+  <h2>Our Services</h2>
+  <p>
+    Zhev Education offers end-to-end study abroad support for students applying to the USA, UK, Canada,
+    Ireland, Australia, New Zealand, Europe and the Middle East. We help you build a strong profile,
+    shortlist the right universities and file applications with accuracy and clarity.
+  </p>
+</section>
 
-  <section>
-    <h2>Our Core Services</h2>
-    <h3>1. University Shortlisting</h3>
-    <p>
-      We evaluate your profile, preferences, and career aspirations to suggest universities that match 
-      your goals. For technical courses such as Computer Science, Data Science, AI/ML, Cybersecurity and 
-      Engineering, we recommend programs with strong labs, research output, internship opportunities and 
-      industry tie-ups. For MBA and Management programs, we focus on ROI, placements and global rankings.
-    </p>
+<section>
+  <h2>What We Offer</h2>
 
-    <h3>2. SOP & LOR Drafting</h3>
-    <p>
-      Our expert writers prepare SOPs that highlight your strengths, academic achievements, technical 
-      projects, internships and motivations. We craft LORs that align with university expectations and 
-      enhance the credibility of your application. Every document undergoes multiple revisions to ensure 
-      quality, clarity and uniqueness.
-    </p>
+  <h3>1. University Shortlisting</h3>
+  <p>
+    Based on your academics, test scores, budget and experience, we create a personalised list of
+    Ambitious, Moderate and Safe universities. We specialise in MS in CS, AI/ML, MBA, Healthcare, Data
+    Science, Engineering, Fashion, Architecture, Hospitality, MBBS and more.
+  </p>
 
-    <h3>3. Application Filing & Document Support</h3>
-    <p>
-      We take care of application form filling, essay reviews, resume structuring, document uploads, 
-      transcript formatting, deadline tracking and portal submissions. Students receive full guidance on 
-      courier documents, WES evaluations and financial documentation.
-    </p>
+  <h3>2. SOP & LOR Drafting</h3>
+  <p>
+    Our expert writers help you craft impactful Statements of Purpose and Letters of Recommendation,
+    ensuring they highlight your strengths, achievements and program alignment.
+  </p>
 
-    <h3>4. Scholarship & Loan Assistance</h3>
-    <p>
-      We help students find university-funded scholarships, government scholarships, partial tuition 
-      waivers, assistantships and external funding options. For education loans, we support students in 
-      understanding eligibility criteria and connecting with lenders offering collateral and non-collateral 
-      loans.
-    </p>
+  <h3>3. Application Filing</h3>
+  <p>
+    We guide you through CommonApp, UCAS, OUAC, UniAssist, university portals and other platforms.
+    Includes essay reviews, resume creation, document uploads and deadline tracking.
+  </p>
 
-    <h3>5. Visa Filing & Interview Preparation</h3>
-    <p>
-      Our visa support includes compiling forms, checking financial proofs, preparing travel history 
-      documentation and conducting detailed mock interviews. We coach students for USA F1 visa interviews, 
-      UK Student Visa SOPs, Canada SDS documentation and Australia GTE requirements.
-    </p>
+  <h3>4. Scholarship Guidance</h3>
+  <p>
+    We help you apply for university-funded, government and private scholarships, tuition waivers,
+    RA/TA positions and grants to reduce study costs.
+  </p>
 
-    <h3>6. Pre-Departure & Post-Arrival Support</h3>
-    <p>
-      We guide students on accommodation, health insurance, forex, SIM cards, travel plans, packing lists 
-      and local transportation. Post-arrival support includes orientation on survival skills, tax ID 
-      applications, bank accounts and university onboarding.
-    </p>
-  </section>
+  <h3>5. Visa Assistance</h3>
+  <p>
+    From documentation to mock interviews, our visa experts help you file USA, UK, Canada, Ireland,
+    Australia and Dubai student visas with confidence.
+  </p>
 
-  <section>
-    <h2>Service Packages</h2>
-    <ul>
-      <li><strong>Apply Smart:</strong> Shortlisting + SOP Review + Application Check</li>
-      <li><strong>Apply Complete:</strong> Full Filing + LOR + Scholarships</li>
-      <li><strong>Visa Secure:</strong> Visa Documents + Mock Interviews</li>
-      <li><strong>All-Inclusive:</strong> Complete end-to-end admissions + visa + pre-departure</li>
-    </ul>
-  </section>
+  <h3>6. Pre-Departure Assistance</h3>
+  <p>
+    We guide you on accommodation, forex, insurance, travel planning, packing, arrival support and
+    university onboarding.
+  </p>
+</section>
 
-  <section>
-    <h2>Testimonials</h2>
-    <div class="grid">
-      <div class="card">
-        <strong>Devansh R.</strong>
-        <p>"Their SOP team helped me craft a strong MS in CS application. I got a scholarship too."</p>
-      </div>
-      <div class="card">
-        <strong>Meera S.</strong>
-        <p>"Visa preparation and mock interviews gave me full confidence. Great experience."</p>
-      </div>
-      <div class="card">
-        <strong>Samir A.</strong>
-        <p>"Detailed guidance on loan documentation and scholarships. Very helpful team."</p>
-      </div>
+<section>
+  <h2>Service Packages</h2>
+  <ul>
+    <li><b>Apply Smart:</b> Shortlisting + SOP review + Application check</li>
+    <li><b>Complete Apply:</b> Filing + SOP + LOR + Documents + Guidance</li>
+    <li><b>Visa Secure:</b> Visa filing + documents + mock interviews</li>
+    <li><b>All-Inclusive:</b> Full admissions to pre-departure support</li>
+  </ul>
+</section>
+
+<section>
+  <h2>Testimonials</h2>
+  <div class="grid">
+    <div class="card">
+      <strong>Devansh R.</strong>
+      <p>"Their SOP team helped me build a strong MS in CS application — received 3 admits."</p>
     </div>
-  </section>
+    <div class="card">
+      <strong>Meera S.</strong>
+      <p>"Very helpful with visas — the mock interview boosted my confidence."</p>
+    </div>
+    <div class="card">
+      <strong>Samir A.</strong>
+      <p>"Excellent guidance for scholarships and loan documentation."</p>
+    </div>
+  </div>
+</section>
 
-  <footer>
-    <p>© 2025 Zhev Education Abroad Consultancy</p>
-  </footer>
+<footer style="background:#2F3A56; color:white; text-align:center; padding:12px;">
+  © 2025 Zhev Education Abroad Consultancy
+</footer>
 
 </body>
 </html>
